--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,30 @@
 {
-  "files": [
-    "src/**"
-  ],
   "compilerOptions": {
-    "noImplicitAny": true,
-    "target": "es5"
-  }
+    "lib": [
+      "es6",
+      "es2016",
+      "DOM"
+    ],
+    // we target Node.js(v6)
+    "module": "commonjs",
+    // export compatibility
+    "target": "es5",
+    // we target Node.js(v6)
+    "moduleResolution": "node",
+    // we target Node.js(v6)
+    "declaration": true,
+    // generate TypeScript definitions
+    "rootDir": ".",
+    "outDir": "dist",
+    // transpile JS in this directory
+    "types": [
+      "node",
+      "jasmine"
+    ]
+    // only use needed types
+  },
+  "include": [
+    "lib/**/*",
+    "src/**/*"
+  ]
 }
