--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "daptin-client",
-  "version": "0.2.0",
+  "version": "0.2.3",
   "description": "NodeJS client supporting jsonapi, actions, state machines for daptin backend",
   "keywords": [
     "daptin",
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "devour-client": "^2.0.7",
+    "jwt-decode": "^2.2.0",
     "pluralize": "^7.0.0"
   },
   "devDependencies": {
