--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "daptin-client",
-  "version": "0.2.5",
-  "description": "NodeJS client supporting jsonapi, actions, state machines for daptin backend",
+  "version": "0.2.6",
+  "description": "NodeJS client supporting jsonapi, actions, state machines, configuration and aggregate api for daptin backend",
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "keywords": [
     "daptin",
     "client",
