--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "daptin-client",
-  "version": "0.3.9",
+  "version": "0.5.2",
   "description": "NodeJS client supporting jsonapi, actions, state machines, configuration and aggregate api for daptin backend",
   "keywords": [
     "daptin",
@@ -10,8 +10,10 @@
   "author": "Parth Mudgal",
   "license": "MIT",
   "dependencies": {
+    "@vercel/ncc": "^0.38.1",
     "axios": "^0.18.0",
     "devour-client": "^2.0.7",
+    "global": "^4.4.0",
     "jwt-decode": "^2.2.0",
     "pluralize": "^7.0.0",
     "tsc": "^1.20150623.0"
