aggregate client for daptin endpoint plus test setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "declaration": true,
     "outDir": "./dist",
     "strict": false,
+    "types": ["@types/jest"],
     "moduleResolution": "node"
   }
 }
