--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "daptin-client",
-  "version": "0.5.2",
+  "version": "0.6.1",
   "description": "NodeJS client supporting jsonapi, actions, state machines, configuration and aggregate api for daptin backend",
   "keywords": [
     "daptin",
@@ -19,13 +19,23 @@
     "tsc": "^1.20150623.0"
   },
   "devDependencies": {
+    "@babel/core": "7.26.0",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "7.24.7",
+    "@babel/preset-typescript": "^7.27.0",
     "@types/core-js": "^0.9.46",
     "@types/jasmine": "^2.8.6",
+    "@types/jest": "^29.5.0",
     "@types/node": "^9.4.6",
+    "babel-jest": "29.7.0",
+    "babel-plugin-transform-import-meta": "2.2.1",
+    "babel-preset-vite": "1.1.3",
     "core-js": "^2.5.3",
     "gulp": "^3.9.1",
     "gulp-typescript": "^4.0.1",
+    "jest": "^29.7.0",
     "jwt-decode": "^2.2.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^2.7.2"
   },
   "repository": {
@@ -39,7 +49,25 @@
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.(js|jsx|ts|tsx)$": "babel-jest"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "transformIgnorePatterns": [
+      "/node_modules/(?!.*\\.mjs$)"
+    ]
   },
   "homepage": "https://github.com/daptin/daptin-client-js#readme"
 }
