--- a/package.json
+++ b/package.json
@@ -10,32 +10,25 @@
   "author": "Parth Mudgal",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.18.0",
-    "devour-client": "^2.0.7",
+    "axios": "^1.7.7",
+    "devour-client": "^2.1.0",
     "global": "^4.4.0",
-    "jwt-decode": "^2.2.0",
-    "pluralize": "^7.0.0",
-    "tsc": "^1.20150623.0"
+    "jwt-decode": "^4.0.0",
+    "pluralize": "^8.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.26.0",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "7.24.7",
-    "@babel/preset-typescript": "^7.27.0",
-    "@types/core-js": "^0.9.46",
-    "@types/jasmine": "^2.8.6",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^9.6.61",
-    "babel-jest": "29.7.0",
-    "babel-plugin-transform-import-meta": "2.2.1",
-    "babel-preset-vite": "1.1.3",
-    "core-js": "^2.5.3",
-    "gulp": "^3.9.1",
-    "gulp-typescript": "^4.0.1",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
+    "@types/node": "^22.10.0",
+    "@types/jest": "^29.5.14",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-transform-import-meta": "^2.2.1",
+    "babel-preset-vite": "^1.1.3",
     "jest": "^29.7.0",
-    "jwt-decode": "^2.2.0",
-    "ts-jest": "^29.1.0",
-    "typescript": "^2.7.2"
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.2"
   },
   "repository": {
     "type": "git",
