--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,23 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "ES2020",
     "lib": [
-      "es6",
-      "es2016",
+      "ES2020",
       "DOM"
     ],
     "module": "commonjs",
     "declaration": true,
     "outDir": "./dist",
+    "rootDir": "./lib",
     "strict": false,
-    "types": ["@types/jest", "@types/node"],
-    "moduleResolution": "node"
-  }
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "types": ["jest", "node"]
+  },
+  "include": ["lib/**/*"],
+  "exclude": ["node_modules", "dist", "**/*.spec.js", "**/*.test.js"]
 }
